--- a/pro/src/styles/variables/_forms.scss
+++ b/pro/src/styles/variables/_forms.scss
@@ -4,6 +4,7 @@ $input-right-icon-padding: rem.torem(32px);
 $input-error-reserved-space: rem.torem(16px);
 $input-space-before-error: rem.torem(8px);
 $label-space-before-input: rem.torem(8px);
+$label-space-before-ds-input: rem.torem(4px);
 $label-small-space-before-input: rem.torem(16px);
 $input-label-min-height: rem.torem(16px);
 $input-description-min-height: rem.torem(16px);
